--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.10)
 
-add_executable(client client.cpp)
-target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_CXX_STANDARD 17)
+
+message(FATAL_ERROR "Could not find Boost libraries")
