--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,3 +1,4 @@
+cmake_minimum_required(VERSION 3.10)
+set(CMAKE_CXX_STANDARD 17)
 
 add_executable(server server.cpp)
-target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
