--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,3 +1,3 @@
-
-add_executable(client client.cpp)
-target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_executable(client client.cpp main.cpp)
+target_link_libraries(client PRIVATE config_reader)
+install(TARGETS client DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
