--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,3 +1,3 @@
-
-add_executable(server server.cpp)
-target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_executable(server server.cpp main.cpp)
+target_link_libraries(server PRIVATE config_reader)
+install(TARGETS server DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
