--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,5 +1,3 @@
-cmake_minimum_required(VERSION 3.10)
 
-set(CMAKE_CXX_STANDARD 17)
-
-message(FATAL_ERROR "Could not find Boost libraries")
+add_executable(client client.cpp)
+target_include_directories(client PRIVATE ${CMAKE_SOURCE_DIR})
