--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,3 +1,4 @@
 
-add_executable(client client.cpp)
-target_include_directories(client PRIVATE ${CMAKE_SOURCE_DIR})
+add_executable(client client.cpp main.cpp)
+target_include_directories(client PRIVATE ${CMAKE_SOURCE_DIR}/conf)
+configure_file(${CMAKE_SOURCE_DIR}/conf/config.ini config.ini COPYONLY)
