--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,3 +1,4 @@
 
-add_executable(server server.cpp)
-target_include_directories(server PRIVATE ${CMAKE_SOURCE_DIR})
+add_executable(server server.cpp main.cpp)
+target_include_directories(server PRIVATE ${CMAKE_SOURCE_DIR}/conf)
+configure_file(${CMAKE_SOURCE_DIR}/conf/config.ini config.ini COPYONLY)
