--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,8 +1,3 @@
-cmake_minimum_required(VERSION 3.10)
-project(AR_CLIENT)
-
-set(CMAKE_CXX_STANDARD 17)
-
 add_executable(client client.cpp main.cpp)
-target_include_directories(client PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../conf)
-configure_file(${CMAKE_SOURCE_DIR}/conf/config.ini config.ini COPYONLY)
+target_link_libraries(client PRIVATE config_reader)
+install(TARGETS client DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
