--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,8 +1,3 @@
-cmake_minimum_required(VERSION 3.10)
-project(AR_SERVER)
-
-set(CMAKE_CXX_STANDARD 17)
-
 add_executable(server server.cpp main.cpp)
-target_include_directories(server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../conf)
-configure_file(${CMAKE_SOURCE_DIR}/conf/config.ini config.ini COPYONLY)
+target_link_libraries(server PRIVATE config_reader)
+install(TARGETS server DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
